--- a/info.html
+++ b/info.html
@@ -1,1 +1,174 @@
-<p>bruh</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+
+    <title>Propositime</title>
+
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- Custom fonts for this template -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900"
+      rel="stylesheet"
+    />
+    <link
+  href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet"
+    />
+
+    <!-- Custom styles for this template -->
+    <link href="style.css" rel="stylesheet" />
+    <link
+      href="https://unpkg.com/aos@2.3.1/dist/aos.css"
+      rel="stylesheet"
+    />
+  </head>
+
+  <body>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="">Summit</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarResponsive"
+          aria-controls="navbarResponsive"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <div class="dropdown">
+                <a class="nav-link" data-toggle="dropdown" href="">About</a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <a class="dropdown-item" href="">Why Summit?</a>
+                  <a class="dropdown-item" href="">Connections</a>
+                  <a class="dropdown-item" href="">Tools</a>
+                </div>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Sign Up</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Log In</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <header class="masthead text-center text-white">
+      <div class="masthead-content">
+        <div class="container">
+          <h1 class="masthead-heading mb-0">Summit</h1>
+          <h2 class="masthead-subheading mb-0">
+            Taking Goal Setting To The Next Level
+          </h2>
+        </div>
+      </div>
+      <div class="bg-circle-1 bg-circle"></div>
+      <div class="bg-circle-2 bg-circle"></div>
+      <div class="bg-circle-3 bg-circle"></div>
+      <div class="bg-circle-4 bg-circle"></div>
+    </header>
+
+    <section id="why">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-6 order-lg-2">
+            <div data-aos="fade-left" class="p-5">
+              <img
+                class="img-fluid rounded-circle"
+                src="img/Propistime.png"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="col-lg-6 order-lg-1">
+            <div data-aos="fade-right" class="p-5">
+              <h2 class="display-4">Achieve Your Goals...For Real</h2>
+              <p>Set long term goals or small, everyday reminders.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="badge">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-6">
+            <div data-aos="fade-right" class="p-5">
+              <img
+                class="img-fluid rounded-circle"
+                src="img/gradientmedal2.png"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div data-aos="fade-left" class="p-5">
+              <h2 class="display-4">Earn Badges</h2>
+              <p>Get rewarded with special badges for your achievements.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="friends">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-6 order-lg-2">
+            <div data-aos="fade-left" class="p-5">
+              <img
+                class="img-fluid rounded-circle"
+                src="img/competition.png"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="col-lg-6 order-lg-1">
+            <div data-aos="fade-right" class="p-5">
+              <h2 class="display-4">Compete With Your Friends</h2>
+              <p>
+                See what goals your friends are setting and create friendly
+                competitions.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="py-5 bg-black">
+      <div class="container">
+        <p class="m-0 text-center text-white small">
+          Copyright &copy; Summit 2020
+        </p>
+      </div>
+      <!-- /.container -->
+    </footer>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+  </body>
+</html>
