--- a/info.html
+++ b/info.html
@@ -59,10 +59,10 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Sign Up</a>
+              <a class="nav-link" href="/signup.html">Sign Up</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Log In</a>
+              <a class="nav-link" href="/login.html">Log In</a>
             </li>
           </ul>
         </div>
