--- a/info.html
+++ b/info.html
@@ -59,10 +59,10 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/signup.html">Sign Up</a>
+              <a class="nav-link" href="signup.html">Sign Up</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/login.html">Log In</a>
+              <a class="nav-link" href="login.html">Log In</a>
             </li>
           </ul>
         </div>
@@ -72,9 +72,11 @@
     <header class="masthead text-center text-white">
       <div class="masthead-content">
         <div class="container">
-          <h1 class="masthead-heading mb-0">Summit</h1>
+          <img id = "bruhshutupani" src = "https://docs.google.com/drawings/d/e/2PACX-1vS-8fUa0xwfel7p5KClUGWZD7sJJlxsQSoVi71wFozIucH0UmIZcaqR0ARdVUsPcIlNhD16cuTjCLNR/pub?w=1244&h=323">
+          <br>
+          <br>
           <h2 class="masthead-subheading mb-0">
-            Taking Goal Setting To The Next Level
+            Connect with tutors and students for free!
           </h2>
         </div>
       </div>
@@ -98,8 +100,8 @@
           </div>
           <div class="col-lg-6 order-lg-1">
             <div data-aos="fade-right" class="p-5">
-              <h2 class="display-4">Achieve Your Goals...For Real</h2>
-              <p>Set long term goals or small, everyday reminders.</p>
+              <h2 class="display-4">Reach Your Academic Goals...For Free</h2>
+              <p>It's a win-win!</p>
             </div>
           </div>
         </div>
@@ -120,7 +122,7 @@
           </div>
           <div class="col-lg-6">
             <div data-aos="fade-left" class="p-5">
-              <h2 class="display-4">Earn Badges</h2>
+              <h2 class="display-4">Connect With Tutors</h2>
               <p>Get rewarded with special badges for your achievements.</p>
             </div>
           </div>
@@ -142,10 +144,9 @@
           </div>
           <div class="col-lg-6 order-lg-1">
             <div data-aos="fade-right" class="p-5">
-              <h2 class="display-4">Compete With Your Friends</h2>
+              <h2 class="display-4"> Volunteer For A Good Cause </h2>
               <p>
-                See what goals your friends are setting and create friendly
-                competitions.
+                Teach kids who aren't as fortunate as others.
               </p>
             </div>
           </div>
@@ -157,7 +158,7 @@
     <footer class="py-5 bg-black">
       <div class="container">
         <p class="m-0 text-center text-white small">
-          Copyright &copy; Summit 2020
+
         </p>
       </div>
       <!-- /.container -->
