--- a/login.html
+++ b/login.html
@@ -157,6 +157,7 @@
               sessionStorage.setItem("role","tutor")
               sessionStorage.setItem("usernamea",uname);
               alert("Success!");
+              window.location = "students.html"
             }
             else{
               alert("Failed Login. Please retry or create an account")
