--- a/quiz.html
+++ b/quiz.html
@@ -73,12 +73,12 @@ img{
   margin-bottom: 20px;
   margin-right: 20px;
   opacity: 80%;
-  width: 5vmin;
+  width: 20vmin;
 }
 #navbar{
   background: rgba(0, 0, 0, 0.7);
   color: white;
-
+  height: 10vmin;
 }
 a{
   color: white;
