--- a/learn.html
+++ b/learn.html
@@ -103,6 +103,19 @@
         left: auto !important;
         right: 0px;
       }
+      h5{
+        padding: 70px 0;
+        text-align: center;
+        margin-bottom: 80vh;
+        color: gainsboro;
+        font-size: 2rem;
+        background: rgba(0,0,0,.5);
+        padding: 70px 0;
+        text-align: center;
+        margin-left: 20%;
+        margin-right: 20%;
+        border-radius: 5px;
+    }
 
     </style>
 
@@ -130,9 +143,17 @@
         renderlist(JSON.parse(list))
 
         function renderlist(list){
-            for(i = 0;i<list.length;i++) {
-                addTutor(list[i]);
-            } 
+            if(list.length==0){
+                var h5 = document.createElement("h5")
+                h5.innerHTML = "No tutors have signed up. Please wait for tutors to sign up!"
+                document.getElementById("bod").appendChild(h5)
+            }
+            else{
+                for(i = 0;i<list.length;i++) {
+                    addTutor(list[i]);
+                } 
+            }
+
         }
 
 
@@ -175,9 +196,16 @@
             li.appendChild(chaticon)
             li.appendChild(document.createElement("br"));
             var p = document.createElement("p");
-            p.appendChild(document.createTextNode(averagestar(x.reviews)+' \u2B50' ))
+            if(x.reviews == ''){
+              p.appendChild(document.createTextNode( 'No Reviews!' ))
+            }
+            else{
+              console.log(x.reviews)
+              p.appendChild(document.createTextNode(averagestar(x.reviews)+' \u2B50' ))
             
-            p.setAttribute('onclick',"allreviews("+JSON.stringify(x.reviews)+")")
+              p.setAttribute('onclick',"allreviews("+JSON.stringify(x.reviews)+")")
+            }
+
             li.appendChild(p);
             ul.appendChild(li);
             
@@ -218,7 +246,7 @@
           reviews = JSON.parse(reviews)
           var total = 0;
           for(var i =0; i<reviews.length;i++){
-            total += parseInt(reviews[i].stars)
+            total += parseFloat(reviews[i].stars)
             console.log(total)
           }
           return (total/reviews.length).toFixed('2')
