--- a/students.html
+++ b/students.html
@@ -98,10 +98,10 @@
         }
         .list-group {
           width: 60vw;
-          margin-top: auto;
+          margin-top: 0vmin;
           margin-left: auto;
           margin-right: auto;
-          margin-bottom: 11vmin;
+          margin-bottom: 14vmin;
           overflow: auto;
         }
         #bruhshutupani {
