--- a/log.html
+++ b/log.html
@@ -177,9 +177,11 @@
           <a clas="nav-link" hss="nav-link active" href="students.html">Your Students</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="log.html">Log Hours</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="profile.html">Profile</a>
         </li>
-
       </ul>
     </div>
     
