--- a/makequiz.html
+++ b/makequiz.html
@@ -8,7 +8,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
 
-
+    <title>Summit</title>
 <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -140,7 +140,7 @@
       <ul class="nav">
         <img id = "bruhshutupani" src = "https://docs.google.com/drawings/d/e/2PACX-1vS-8fUa0xwfel7p5KClUGWZD7sJJlxsQSoVi71wFozIucH0UmIZcaqR0ARdVUsPcIlNhD16cuTjCLNR/pub?w=1244&h=323">
         <li class="nav-item">
-          <a class="nav-link active" href="students.html">Your Students</a>
+          <a clas="nav-link" hss="nav-link active" href="students.html">Your Students</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="log.html">Log Hours</a>
@@ -148,7 +148,6 @@
         <li class="nav-item">
           <a class="nav-link" href="profile.html">Profile</a>
         </li>
-
       </ul>
     </div>
 
