--- a/profile.html
+++ b/profile.html
@@ -8,7 +8,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
     <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
-
+    <title>Summit</title>
 
 <meta charset="utf-8" />
     <meta
@@ -199,17 +199,14 @@
     <div id="navbar" class ="ml-auto">
       <ul class="nav">
         <img id = "bruhshutupani" src = "https://docs.google.com/drawings/d/e/2PACX-1vS-8fUa0xwfel7p5KClUGWZD7sJJlxsQSoVi71wFozIucH0UmIZcaqR0ARdVUsPcIlNhD16cuTjCLNR/pub?w=1244&h=323">
-        <li class="nav-item ">
-          <a class="nav-link active" href="#">Your Tutors</a>
+        <li class="nav-item">
+          <a clas="nav-link" hss="nav-link active" href="students.html">Your Students</a>
         </li>
-        <li class="nav-item ">
-          <a class="nav-link" href="#">Link</a>
+        <li class="nav-item">
+          <a class="nav-link" href="log.html">Log Hours</a>
         </li>
-        <li class="nav-item ">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item ">
-          <a class="nav-link" href="#">Disabled</a>
+        <li class="nav-item">
+          <a class="nav-link" href="profile.html">Profile</a>
         </li>
       </ul>
     </div>
