--- a/read.html
+++ b/read.html
@@ -134,12 +134,14 @@
       <ul class="nav">
         <img id = "bruhshutupani" src = "https://docs.google.com/drawings/d/e/2PACX-1vS-8fUa0xwfel7p5KClUGWZD7sJJlxsQSoVi71wFozIucH0UmIZcaqR0ARdVUsPcIlNhD16cuTjCLNR/pub?w=1244&h=323">
         <li class="nav-item ">
-          <a class="nav-link active" href="learn.html">Find Tutors</a>
+          <a class="nav-link" href="learn.html">Find Tutors</a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link" href="yourtutors.html">Your Tutors</a>
+          <a class="nav-link active" href="yourtutors.html">Your Tutors</a>
         </li>
-
+        <li class="nav-item ">
+          <a class="nav-link" href="read.html">Read</a>
+        </li>
       </ul>
     </div>
   <div id="mainBod">
