--- a/students.html
+++ b/students.html
@@ -17,7 +17,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Propositime</title>
+    <title>Summit</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -157,12 +157,14 @@
       <ul class="nav">
         <img id = "bruhshutupani" src = "https://docs.google.com/drawings/d/e/2PACX-1vS-8fUa0xwfel7p5KClUGWZD7sJJlxsQSoVi71wFozIucH0UmIZcaqR0ARdVUsPcIlNhD16cuTjCLNR/pub?w=1244&h=323">
         <li class="nav-item">
-          <a class="nav-link active" href="log.html">Log Hours</a>
+          <a clas="nav-link" hss="nav-link active" href="students.html">Your Students</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="log.html">Log Hours</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="profile.html">Profile</a>
         </li>
-
       </ul>
     </div>
 
