--- a/yourtutors.html
+++ b/yourtutors.html
@@ -232,6 +232,7 @@
         reviewDescription.style['margin'] = 'auto';
         reviewDescription.style['margin-bottom'] = '3vmin';
         reviewDescription.style['font-size'] = '2vmin';
+        reviewDescription.style['color'] = 'black';
         reviewDescription.setAttribute('id','reviewDesc');
         reviewDescription.setAttribute('placeholder','Describe your experience:');
 
