--- a/read.html
+++ b/read.html
@@ -126,6 +126,9 @@
         background: rgba(55,53, 77,1);
         max-width: 155px;
       }
+      textarea{
+        font-size: 2.5vmin;
+      }
 </style>
 </head>
 <body>
